--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,12 +1,11 @@
 body{
     background-color: grey;
-    text-align:center;
     #main-container{
         background-color: white;
         width: 50%;
         position: absolute;
         left: 25%;
-        height: 100%;
+        height: auto;
         header{
             opacity: 0.5;
             padding-top: 2px;
@@ -136,12 +135,33 @@ body{
         }
     
         #list-container{
-            width:50%;
-            position: relative;
-            left:25%;
-            bottom:10px;
+            
             #details-container{
                 display:flex;
+                width:100%;
+                border-top:1px solid lightgrey;
+                #checkbox{
+                    width: 10%;
+                    
+                    input{
+                        margin-left:25px;
+                        margin-top:15px;
+                    }
+                }
+                #details{
+                    width:50%;
+                    #details-heading{
+                        h5{
+                            margin:5px;
+                        }
+                    }
+                    #date-icon{
+                        font-size:0.7rem;
+                    }
+                }
+                #category{
+                    width: 40%;
+                }
             }
         }
     }
