--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,10 @@
 
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/5af1b87095.js" crossorigin="anonymous"></script>
+        <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
         <%- style%>
     </head>
 
