--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -64,47 +64,56 @@ body {
               opacity: 0.5; }
               body #main-container #get-container #category_duedate-container #duedate-container #dd_input input:focus {
                 outline: none; }
-    body #main-container #button-container {
+    body #main-container .button-container {
       height: 100px;
       display: flex;
       align-items: center;
       justify-content: center; }
-      body #main-container #button-container .button {
+      body #main-container .button-container .button {
         width: 25%;
         height: 50%; }
-      body #main-container #button-container input {
+      body #main-container .button-container button {
         border: none;
         height: 100%;
         background: none;
         color: white; }
-        body #main-container #button-container input:focus {
+        body #main-container .button-container button:focus {
           outline: none; }
-      body #main-container #button-container #submit-button {
+      body #main-container .button-container #submit-button {
         display: flex;
         justify-content: space-between;
         background-color: #444;
         margin-right: 10px; }
-        body #main-container #button-container #submit-button input {
+        body #main-container .button-container #submit-button button {
           width: 80%; }
-        body #main-container #button-container #submit-button:hover {
+        body #main-container .button-container #submit-button:hover {
           background-color: grey; }
-      body #main-container #button-container #delete-button {
-        display: flex;
-        justify-content: space-between;
-        background-color: #ED351D;
-        margin-left: 10px; }
-        body #main-container #button-container #delete-button input {
-          width: 80%; }
-        body #main-container #button-container #delete-button:hover {
-          background-color: #b12d1b; }
-      body #main-container #button-container i {
+      body #main-container .button-container i {
         color: white;
         width: 20%;
         margin-top: 10%; }
+    body #main-container #list-container #delete-button {
+      height: 50px;
+      background-color: red;
+      width: 25%;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      left: 36.5%; }
+      body #main-container #list-container #delete-button button {
+        border: none;
+        background: none;
+        color: white; }
+        body #main-container #list-container #delete-button button:focus {
+          outline: none; }
     body #main-container #list-container #details-container {
       display: flex;
+      justify-content: space-between;
       width: 100%;
-      border-top: 1px solid lightgrey; }
+      border-top: 1px solid lightgrey;
+      margin-top: 10px; }
       body #main-container #list-container #details-container #checkbox {
         width: 10%; }
         body #main-container #list-container #details-container #checkbox input {
@@ -117,4 +126,11 @@ body {
         body #main-container #list-container #details-container #details #date-icon {
           font-size: 0.7rem; }
       body #main-container #list-container #details-container #category {
-        width: 40%; }
+        width: 15%;
+        color: white;
+        text-transform: uppercase;
+        font-size: small;
+        height: auto;
+        margin-right: 10px; }
+        body #main-container #list-container #details-container #category p {
+          height: 100%; }
