--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -84,7 +84,7 @@ body{
             }
         }
     
-        #button-container{
+        .button-container{
             height: 100px;
             display: flex;
             align-items: center;
@@ -93,7 +93,7 @@ body{
                 width:25%;
                 height:50%;
             }
-            input{
+            button{
                 border: none;
                 height:100%;
                 background: none;
@@ -107,23 +107,11 @@ body{
                 justify-content: space-between;
                 background-color: #444;
                 margin-right: 10px;
-                input{
+                button{
                     width: 80%;
                 }
                 &:hover{
                     background-color: grey;
-                }
-            }
-            #delete-button{
-                display: flex;
-                justify-content: space-between;
-                background-color:#ED351D;
-                margin-left: 10px;
-                input{
-                    width: 80%;
-                }
-                &:hover{
-                    background-color: rgb(177, 45, 27);
                 }
             }
             i{
@@ -134,12 +122,34 @@ body{
             
         }
     
+        
+
         #list-container{
-            
+            #delete-button{
+                height: 50px;
+                background-color: rgb(255, 0, 0);
+                width: 25%;
+                color:white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                left:36.5%;
+                button{
+                    border: none;
+                    background:none;
+                    color:white;
+                    &:focus{
+                        outline:none;
+                    }
+                }
+            }
             #details-container{
                 display:flex;
+                justify-content: space-between;
                 width:100%;
                 border-top:1px solid lightgrey;
+                margin-top: 10px;
                 #checkbox{
                     width: 10%;
                     
@@ -160,10 +170,17 @@ body{
                     }
                 }
                 #category{
-                    width: 40%;
+                    width: 15%;
+                    color: white;
+                    text-transform: uppercase;
+                    font-size: small;
+                    height: auto;
+                    margin-right: 10px;
+                    p{
+                        height: 100%;
+                    }
                 }
             }
         }
     }
-    
 }
